# ScanCraft

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: build.yml
ScanCraft/: CMakeLists.txt
ScanCraft/scripts/: metaboard.py
ScanCraft/src/: MainWindow.cpp  MainWindow.hpp  MeshDisplay.cpp  MeshDisplay.hpp  MeshLoader.cpp  MeshLoader.hpp  PhotogrammetryPipeline.cpp  PhotogrammetryPipeline.hpp  PipelineController.cpp  PipelineController.hpp  ReconstructionOptions.hpp  main.cpp
ScanCraft/src/loaders/: JPGLoader.cpp  JPGLoader.hpp  MeshLoader.hpp  STLLoader.cpp  STLLoader.hpp
triplets/: arm64-osx.cmake
